--- a/app/views/site_layout.html
+++ b/app/views/site_layout.html
@@ -2,12 +2,10 @@
 
 <html>
     <head>
-        <title>#{get 'title' /}</title>
-        <meta charset="utf-8">
+        <title>Clean Code Library</title>
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
         #{get 'moreStyles' /}
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
-        <script src="@{'/public/javascripts/jquery-1.5.2.min.js'}" type="text/javascript" charset="utf-8"></script>
         #{get 'moreScripts' /}
     </head>
     <body>
