--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -4,6 +4,7 @@
 	#{script 'ace.js' /}
 	#{script 'mode-java.js' /}
 	#{script 'theme-clouds_midnight.js' /}
+	#{script 'jquery-1.6.1.min.js' /}
 #{/set}
 
 <script>
@@ -13,6 +14,15 @@
 		var JavaMode = require("ace/mode/java").Mode;
 		editor.getSession().setMode(new JavaMode());
 		editor.setReadOnly(true);
+		editor.setShowPrintMargin(false);
+		editor.setHighlightActiveLine(false);
+		
+		$("p[lineNumber]").click(function() {
+			var lineNumber = $(this).attr("lineNumber");
+			editor.gotoLine(lineNumber);
+			editor.scrollToLine(lineNumber);
+			editor.setHighlightActiveLine(true);
+		});
 	};
 </script>
 
@@ -26,7 +36,7 @@
 <div id="what-i-like">
 	<p>+</p>
 	#{list items:codeReview.thingsILike, as:'whatILike'}
-	<p>${whatILike.content}</p>
+	<p lineNumber="${whatILike.lineNumber}">${whatILike.content}</p>
 	#{/list}
 </div>
 <div id="what-i-dont-like">
