the what i dont like section also has the fancy line clicking stuff

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -41,5 +41,7 @@
 </div>
 <div id="what-i-dont-like">
 	<p>-</p>
-	<p>${codeReview.whatIDontLike}</p>
+	#{list items:codeReview.thingsIDontLike, as:'whatIDontLike'}
+	<p lineNumber="${whatIDontLike.lineNumber}">${whatIDontLike.content}</p>
+	#{/list}
 </div>
