added the ability to submit all of the lines of text in the editor to the server. this is helpful to preserve lines during the upload of a file

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -26,10 +26,6 @@
 	};
 </script>
 
-<div id="header">
-	<h1>Clean Code Library</h1>
-</div> 
-
 <div id="editor-panel">
 	<div id="code-under-review">${codeReview.text}</div>
 </div>
@@ -54,4 +50,5 @@
     	<p><label>file</label><input type="file" name="codeReview" /></p>
     	<input type="submit" value="Upload" />
 	</form>
+	<a href="@{Application.add}">Upload some code</a>
 </div>
