--- a/app/views/site_layout.html
+++ b/app/views/site_layout.html
@@ -9,6 +9,10 @@
         #{get 'moreScripts' /}
     </head>
     <body>
+	    <div id="header">
+			<h1>Clean Code Library</h1>
+		</div> 
+    
         #{doLayout /}
     </body>
 </html>
