--- a/app/views/Application/add.html
+++ b/app/views/Application/add.html
@@ -10,6 +10,7 @@
 	#{script 'textEditor.js' /}
 	#{script 'server-message-builder.js' /}
 	#{script 'server-message.js' /}
+	#{script 'json.js' /}
 #{/set}
 
 <script>
@@ -19,8 +20,12 @@ window.onload = function() {
 		Form.create('#upload-a-code-review-form').onSubmit(function() {
 			var message = ServerMessageBuilder.create()
 								.postTo('/upload')
-								.jsonData(textEditor.getLinesOfText())
-								.onSuccess(function() { alert("success"); })
+								.data({'json' : Json.createFrom(textEditor.getLinesOfText()), 'name': $('#name').attr("value")})
+								.onSuccess(function(response) {
+									alert("success! : " + response);
+									alert(Json.toObject(response).redirectTo);
+									document.location = Json.toObject(response).redirectTo;
+								})
 								.build();
 			message.send();
 		});
@@ -35,8 +40,8 @@ window.onload = function() {
 </div>
 
 <div id="upload-a-code-review">
-	<form id="upload-a-code-review-form" action="@{Application.uploadSomeCode()}" method="POST">
-    	<p><label>name</label><input type="text" name="name" /></p>
+	<form id="upload-a-code-review-form" method="POST">
+    	<p><label>name</label><input type="text" id="name" name="name" /></p>
     	<input type="text" id="code" name="code" value="cow" />
     	<input type="submit" value="Upload" />
 	</form>
