--- a/app/views/Application/add.html
+++ b/app/views/Application/add.html
@@ -7,7 +7,7 @@
 	#{script 'jquery-1.6.1.min.js' /}
 	#{script 'jquery.json-2.2.min.js' /}
 	#{script 'form.js' /}
-	#{script 'textEditor.js' /}
+	#{script 'text-editor.js' /}
 	#{script 'server-message-builder.js' /}
 	#{script 'server-message.js' /}
 	#{script 'json.js' /}
