--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,9 +1,9 @@
 #{extends 'site_layout.html' /}
 
 #{set 'moreScripts'}
-	#{script 'ace.js' /}
-	#{script 'mode-java.js' /}
-	#{script 'theme-clouds_midnight.js' /}
+	#{script 'ace/ace.js' /}
+	#{script 'ace/mode-java.js' /}
+	#{script 'ace/theme-clouds_midnight.js' /}
 	#{script 'jquery-1.6.1.min.js' /}
 	#{script 'text-editor-builder.js' /}
 	#{script 'text-editor.js' /}
