moved jquery javascript files to their own directory

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -4,7 +4,7 @@
 	#{script 'ace/ace.js' /}
 	#{script 'ace/mode-java.js' /}
 	#{script 'ace/theme-clouds_midnight.js' /}
-	#{script 'jquery-1.6.1.min.js' /}
+	#{script 'jquery/jquery-1.6.1.min.js' /}
 	#{script 'text-editor-builder.js' /}
 	#{script 'text-editor.js' /}
 #{/set}
