--- a/app/views/Application/add.html
+++ b/app/views/Application/add.html
@@ -4,8 +4,8 @@
 	#{script 'ace/ace.js' /}
 	#{script 'ace/mode-java.js' /}
 	#{script 'ace/theme-clouds_midnight.js' /}
-	#{script 'jquery-1.6.1.min.js' /}
-	#{script 'jquery.json-2.2.min.js' /}
+	#{script 'jquery/jquery-1.6.1.min.js' /}
+	#{script 'jquery/jquery.json-2.2.min.js' /}
 	#{script 'form.js' /}
 	#{script 'text-editor-builder.js' /}
 	#{script 'text-editor.js' /}
