--- a/app/views/CodeReviewPresenter/display.html
+++ b/app/views/CodeReviewPresenter/display.html
@@ -22,8 +22,12 @@
 <div id="editor-panel">
 	<div id="code-under-review">${codeReview.text}</div>
 </div>
+<div id="menu">
+	<a href="/random">Again again!</a>
+	<a href="/upload">Upload some code</a>
+</div>
+
 <div id="code-review">
-	<a href="@{RandomCodeReviewPresenter.display}">Random piece of code</a>
 	<div id="metadata">
 		<p>${codeReview.name}</p>
 	</div>
@@ -39,13 +43,4 @@
 		<p lineNumber="${whatIDontLike.lineNumber}">${whatIDontLike.content}</p>
 		#{/list}
 	</div>
-</div>
-<div id="upload-a-code-review">
-	<p>Upload a review</p>
-	<form action="@{Application.uploadCodeReview()}" method="POST" enctype="multipart/form-data">
-    	<p><label>name</label><input type="text" name="name" /></p>
-    	<p><label>file</label><input type="file" name="codeReview" /></p>
-    	<input type="submit" value="Upload" />
-	</form>
-	<a href="@{Application.add}">Upload some code</a>
 </div>
