--- a/app/views/UploadCodeReviewPresenter/display.html
+++ b/app/views/UploadCodeReviewPresenter/display.html
@@ -35,15 +35,27 @@ window.onload = function() {
 	<h1>Upload some code ye sonny jim</h1>
 </div> 
 
-<a href="/">cancel</a>
 
 <div id="editor-panel">
 	<div id="code-under-review"></div>
 </div>
 
-<div id="upload-a-code-review">
+<div id="code-review">
+	<div id="metadata">
+		<p><label>name</label><input type="text" id="name" name="name" /></p>
+	</div>
+	<div id="what-i-like">
+		<p>+</p>
+	</div>
+	<div id="what-i-dont-like">
+		<p>-</p>
+	</div>
 	<form id="upload-a-code-review-form" method="POST">
-    	<p><label>name</label><input type="text" id="name" name="name" /></p>
-    	<input type="submit" value="Upload" />
+		<input type="submit" value="Save" />
+		<a href="/">cancel</a>
 	</form>
+</div>
+
+<div id="upload-a-code-review">
+	
 </div>
