saving the bad stuff as well as the good stuff for a code review

--- a/app/views/UploadCodeReviewPresenter/display.html
+++ b/app/views/UploadCodeReviewPresenter/display.html
@@ -21,13 +21,15 @@ window.onload = function() {
 
 		var textEditor = TextEditorBuilder.create().atElement("code-under-review").isEditable().build();
 		var whatILikeRepository = ReviewCommentRepository.create();
-		
+		var whatIDontLikeRepository = ReviewCommentRepository.create();
+				
 		Form.create('#upload-a-code-review-form').onSubmit(function() {
 			var message = ServerMessageBuilder.create()
 								.postTo('/upload')
 								.data({'json' : Json.createFrom(textEditor.getLinesOfText()), 
 									   'name': $('#name').attr("value"),
-									   'thingsILike': Json.createFrom(whatILikeRepository.all()) })
+									   'thingsILike': Json.createFrom(whatILikeRepository.all()),
+									   'thingsIDontLike': Json.createFrom(whatIDontLikeRepository.all()) })
 								.onSuccess(function(response) {
 									document.location = response.redirectTo;
 								})
@@ -38,7 +40,12 @@ window.onload = function() {
 		
 		$('#add-what-i-like').click(function() {
 			var whatILike = prompt("what do you think?");
-			whatILikeRepository.save(ReviewComment.like(whatILike, textEditor.getSelection()));
+			whatILikeRepository.save(ReviewComment.create(whatILike, textEditor.getLineNumber()));
+		});
+		
+		$('#add-what-i-dont-like').click(function() {
+			var whatIDontLike = prompt("what do you think?");
+			whatIDontLikeRepository.save(ReviewComment.create(whatIDontLike, textEditor.getLineNumber()));
 		});
 	};
 </script>
@@ -59,7 +66,7 @@ window.onload = function() {
 		<p>+ <input type="button" id="add-what-i-like" value="add" /></p>
 	</div>
 	<div id="what-i-dont-like">
-		<p>-</p>
+		<p>- <input type="button" id="add-what-i-dont-like" value="add" /></p>
 	</div>
 	<form id="upload-a-code-review-form" method="POST">
 		<input type="submit" value="Save" />
